# MedLabelIQ

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/evaluation/: multisource_orchestration_eval_challenge.yaml  multisource_orchestration_eval_smoke.yaml  qa_generation_eval_challenge.yaml  qa_generation_eval_smoke.yaml  retrieval_eval_paraphrase.yaml  retrieval_eval_smoke.yaml
data/interim_backup_before_fresh_bootstrap/: dense_retrieval_eval_paraphrase_results.csv  dense_retrieval_eval_smoke_results.csv  download_manifest.csv  grounded_qa_eval_challenge_diagnostics.csv  grounded_qa_eval_challenge_guarantee_guardrail.csv  grounded_qa_eval_challenge_negative_treatment_guardrail.csv  grounded_qa_eval_challenge_negative_treatment_guardrail_v2.csv  grounded_qa_eval_challenge_results.csv  grounded_qa_eval_challenge_seeded_run1.csv  grounded_qa_eval_challenge_seeded_run2.csv  grounded_qa_eval_smoke_results.csv  (+19 more)
docs/: MEDLABELIQ_COMPREHENSIVE_DOCUMENTATION.md
tests/: test_answer_generator_helpers.py  test_api_app.py  test_api_identity_source.py  test_claim_guardrails.py  test_drug_filter_resolution.py  test_drug_mention_detection.py  test_family_planning_workflow.py  test_identity_source_workflow.py  test_manifest_scoring.py  test_mixed_source_composition.py  test_mixed_source_fail_closed.py  test_multisource_orchestration_eval.py  test_qa_analytics.py  test_qa_workflow.py  test_retrieval_family_planner.py  test_rxnorm_identity_answer.py  test_rxnorm_resolver.py  test_source_router.py
(+147 files in other folders)
